syntax = "proto3";

package todoapp.v1;

import "todoapp/v1/messages.proto";

service HealthcheckService {
  rpc Unary(UnaryRequest) returns (UnaryResponse);
  rpc ServerStreaming(ServerStreamingRequest)
      returns (stream ServerStreamingResponse);
  rpc ClientStreaming(stream ClientStreamingRequest)
      returns (ClientStreamingResponse);
  rpc BidirectionalStreaming(stream BidirectionalStreamingRequest)
      returns (stream BidirectionalStreamingResponse);
}

service TodoappService {
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
}
